--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <img id="todolist" src="/image/todolist.png" alt="todolist">
         <img id="valentino" src="/image/stephanorender.png" alt="stephanovalentinophoto">
         <img id="tictactoe" src="/image/tic-tac-toe.png" alt="tictactoe">
-        <img id="tickets" src="/image/tickets.png" alt="tickets">
-        <img id="cretion3" src="/image/cretion.jpg" alt="cretion3">
+        <img id="tickets" src="/image/tickets.png" alt="tickets">        
+        <img id="creation3" src="/image/stephano.png" alt="creation3">
     </div>
 </div>
         <footer>
