ajout d un fichier vide .nojekyll

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/image/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="./image/favicon-16x16.png">
     <meta type="Description" content="ceci est mon portfolio étudiant">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Mon portfolio</title>
-    <script src="/index.js" defer></script>
+    <script src="./index.js" defer></script>
 </head>
 
 <body>
@@ -46,19 +46,23 @@
         <h2>Découvrez mes compétences</h2>
         <span class="html">
             <h3>HTML</h3>
-            <img id="html" src="/image/logo html.jpg" alt="html">
+            <img id="html" src="./image/logo html.jpg" alt="html">
         </span>
         <span class="css">
             <h3>CSS</h3>
-            <img id="css" src="/image/logo css.jpg" alt="css">
+            <img id="css" src="./image/logo css.jpg" alt="css">
         </span>
         <span>
             <h3>JAVASCRIPT</h3>
-            <img id="js" src="/image/logo js.jpg" alt="js">
+            <img id="js" src="./image/logo js.jpg" alt="js">
         </span>
         <span class="react">
             <h3>REACT</h3>
             <img id="react" src="./image/react-1-logo-png-transparent.png" alt="react">
+        </span>
+        <span class="Node">
+            <h3>NODE.JS</h3>
+            <img id="node" src="./image/node.png" alt="node.js">
         </span>
     </div>
 
@@ -66,11 +70,11 @@
     <h2>Mes réalisations</h2>
     <div class="realisations">
         <img id="calculette" src="./image/calculette.png" alt="calculette">
-        <img id="todolist" src="/image/todolist.png" alt="todolist">
-        <img id="valentino" src="/image/stephanorender.png" alt="stephanovalentinophoto">
-        <img id="tictactoe" src="/image/tic-tac-toe.png" alt="tictactoe">
-        <img id="tickets" src="/image/tickets.png" alt="tickets">        
-        <img id="creation3" src="/image/stephano.png" alt="creation3">
+        <img id="todolist" src="./image/todolist.png" alt="todolist">
+        <img id="valentino" src="./image/stephanorender.png" alt="stephanovalentinophoto">
+        <img id="tictactoe" src="./image/tic-tac-toe.png" alt="tictactoe">
+        <img id="tickets" src="./image/tickets.png" alt="tickets">        
+        <img id="creation3" src="./image/stephano.png" alt="creation3">
     </div>
 </div>
         <footer>
@@ -95,7 +99,7 @@
                         
                        
                         <span class="value">Visibilié web<br>
-                       <img src="/image/logo web.jpg" alt="">
+                       <img src="./image/logo web.jpg" alt="">
                      </span>
                     </div>
 
