--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="slider">
         <span class="title">
         <h1>Jean-René DERIMER</h1>
-        <p>Je suis développeur web webmobile</p>                
+        <p>Développeur web webmobile</p>                
     </span>
     </div>
     <div class="section">
@@ -43,7 +43,7 @@
     </div>
   
     <div class="competences">
-        <h2>Découvrez mes compétences</h2>
+        <h2> Compétences en cours d 'acquisition</h2>
         <span class="html">
             <h3>HTML</h3>
             <img id="html" src="./image/logo html.jpg" alt="html">
@@ -69,12 +69,30 @@
    <div class="rea">
     <h2>Mes réalisations</h2>
     <div class="realisations">
+        <span class=" creation1">
+        <h3> calculette html css vanilla js </h3>
         <img id="calculette" src="./image/calculette.png" alt="calculette">
+        </span>
+        <span class="creation2">
+        <h3>TODOLIST html css vanilla js </h3>
         <img id="todolist" src="./image/todolist.png" alt="todolist">
+        </span>
+        <span class="creation3">
+        <h3>stephanovalentino html css keyframes js</h3>
         <img id="valentino" src="./image/stephanorender.png" alt="stephanovalentinophoto">
+        </span>
+        <span class="creation4">
+        <h3>jeu du pendu html css vanilla js</h3>
         <img id="tictactoe" src="./image/tic-tac-toe.png" alt="tictactoe">
-        <img id="tickets" src="./image/tickets.png" alt="tickets">        
+        </span>
+        <span class="creation5">
+        <h3>Distributeur de tickets html css vanilla js</h3>
+        <img id="tickets" src="./image/tickets.png" alt="tickets"> 
+        </span>
+        <span class="creation6">
+        <h3>stephanovalentinophoto React node.js mysql </h3>     
         <img id="creation3" src="./image/stephano.png" alt="creation3">
+        </span>
     </div>
 </div>
         <footer>
